--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@ small {
     display: flex;
     flex-direction: column; /* This stacks the items vertically */
     align-items: center;
+    white-space: nowrap;
     background-color: #2c2c2c;
     border-radius: 8px;
     padding: 0px 0px;
