--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ small {
 /* --- Styles for Temperature Display Cards --- */
 .temp-card {
     display: flex;
+    white-space: nowrap;
     flex-direction: column; /* This stacks the items vertically */
     align-items: center;
     background-color: #2c2c2c;
