--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h2 {
 }
 
 h3 {
-    color: #b0bec5;
+    color: #90caf9;
     margin-top: 25px;
     margin-bottom: 10px;
     border-bottom: 1px dashed #333;
